--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "game.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/elburge1/zombie-game#readme",
   "dependencies": {
+    "express": "^4.14.0",
     "knex": "^0.11.7",
     "pg": "^6.0.1"
   }
